tests/errors/lifetime/nll/out_param_never_written_still_leaks.err.expected
error: at 4:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'x' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 4 |             return
   |             ^^^^^^
